examples/test/testpolicy19903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19903
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key30: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value8
          key17: value10
          key44: value15
      podSelector:
        matchLabels:
          key40: value10
          key49: value12
          key43: value25
